calico-policy/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend-web
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-web
